--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "apexcharts": "^3.37.1",
     "autoprefixer": "^10",
+    "axios": "^1.3.4",
     "core-js": "^3.8.3",
     "postcss": "^8",
     "react-apexcharts": "^1.4.0",
